landing page html and css cleanup

--- a/UniBits.html
+++ b/UniBits.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>UniBite</title>
-    <link rel="stylesheet" href="UniBits.css">
+    <link rel="stylesheet" href="Styles/UniBits.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                 <div class="title"> 
 
             <h1>UniBite.</h1>
-            <p>Skip the <mark>line</mark>, Save the <mark>time</mark>.</p>
+            <p>Skip the <mark>line</mark>, Save <mark>time</mark>.</p>
             <div class="login">
                 <b href="link">Sign up</b>
                 <a href="link">Login</a>
@@ -45,7 +45,7 @@
                     <p>Order your favorite meals quickly and effortlessly. UniBite turns cravings into reality in just a few taps.</p>
                 </div>
                 <div class="img">
-                    <img src="Photos/1.jpeg" alt="Seamless Ordering">
+                    <img src="images/1.jpeg" alt="Seamless Ordering">
                 </div>
             </div>
         
@@ -56,7 +56,7 @@
                     <p>Customize every meal to your taste and enjoy smooth, hassle-free payment options with UniBite.</p>
                 </div>
                 <div class="img">
-                    <img src="Photos/2.jpeg" alt="Personalized Experience">
+                    <img src="images/2.jpeg" alt="Personalized Experience">
                 </div>
             </div>
         
@@ -67,7 +67,7 @@
                     <p>Get instant notifications and pick up your food at the perfect time. No waiting, no delays!</p>
                 </div>
                 <div class="img">
-                    <img src="Photos/5.jpeg" alt="Real-Time Updates">
+                    <img src="images/5.jpeg" alt="Real-Time Updates">
                 </div>
             </div>
         </section>
