--- a/About-us.html
+++ b/About-us.html
@@ -12,15 +12,16 @@
   <nav>
     <ul>
       <li><a href="link">Restaurants</a></li>
-      <li><a href="link">About us</a></li>
+      <li><a href="About-us.html">About us</a></li>
       <li><a href="link">Help</a></li>
     </ul>
     <div>
-      <a href="link">Sign up</a>
-      <a href="link">Login</a>
+      <button class="singUp">Sign up</button>
+      <button class="logIn">Log in</button>
     </div>
   </nav>
 </header>
+
 
 <main>
 
