--- a/UniBits.html
+++ b/UniBits.html
@@ -12,17 +12,18 @@
         <nav>
             <ul>
                 <li><a href="link">Restaurants</a></li>
-                <li><a href="link">About us</a></li>
+                <li><a href="About-us.html">About us</a></li>
                 <li><a href="link">Help</a></li>
             </ul>
             <div>
-                <a href="link">Sign up</a>
-                <a href="link">Login</a>
+                <button class="singUp">Sign up</button>
+                <button class="logIn">Log in</button>
             </div>
         </nav>
     </header>
 
-    <main>
+
+<main>
         
             <div class="background"> 
                 <div class="title"> 
@@ -30,8 +31,8 @@
             <h1>UniBite.</h1>
             <p>Skip the <mark>line</mark>, Save <mark>time</mark>.</p>
             <div class="login">
-                <b href="link">Sign up</b>
-                <a href="link">Login</a>
+                <button class="singUp">Sign up</button>
+                <button class="logIn">Log in</button>
             </div>
                 </div>
         </div>
