msh faker bs haga soghyra fel login form

--- a/Login.html
+++ b/Login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Login</title>
-    <link rel="stylesheet" href="Login.css">
+    <link rel="stylesheet" href="Styles/Login.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo">UniBite</div>
+        <div class="logo">UniBite.</div>
         <div class="nav-links">
             <a href="#">Restaurants</a>
             <a href="#">About Us</a>
@@ -41,7 +41,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <div class="logo">UniBite</div>
+        <div class="logo">UniBite.</div>
         <div class="footer-links">
             <a href="#">Restaurants</a>
             <a href="#">About Us</a>
