--- a/About-us.html
+++ b/About-us.html
@@ -16,8 +16,8 @@
       <li><a href="link">Help</a></li>
     </ul>
     <div>
-      <button class="singUp">Sign up</button>
-      <button class="logIn">Log in</button>
+      <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
+      <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
     </div>
   </nav>
 </header>
