mohamed sayed & yahia mohamed.
improved products page added drop menu for trending products

--- a/Products.html
+++ b/Products.html
@@ -24,100 +24,86 @@
 <section class="Storeshow">
 <div class="StoreEX">
   <h1 class="store-name">My Corner</h1>
-  <h2> Foul and Falafel</h2>
+  <h2 class="store-cuisine"> Foul and Falafel</h2>
 </div>
 </section>
 
-<div class="Trending-container">
-  <h2>Trending Products</h2>
-  <div class="grid">
-    <!-- Large Item -->
-    <div class="large-item">
-      <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-      <div class="info">
-        <strong>Kiri Falafel</strong><br>
-        <p>Delicous Falafel sandwhich filled with kiri</p> <br>
-        <span class="price">162 EGP</span>
+
+<!-- end of store show -->
+<section class="trending-products">
+  <details>
+    <summary>Trending Products</summary>
+    <div class="trending-products-container">
+      <div class="trending-product">
+        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <h3>Kiri Falafel Sandwich</h3>
+        <p class="price">30 EGP</p>
+      </div>
+      <div class="trending-product">
+        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <h3>Kiri Falafel Sandwich</h3>
+        <p class="price">30 EGP</p>
+      </div>
+      <div class="trending-product">
+        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <h3>Kiri Falafel Sandwich</h3>
+        <p class="price">30 EGP</p>
+      </div>
+      <div class="trending-product">
+        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <h3>Kiri Falafel Sandwich</h3>
+        <p class="price">30 EGP</p>
+      </div>
+      <div class="trending-product">
+        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <h3>Kiri Falafel Sandwich</h3>
+        <p class="price">30 EGP</p>
+      </div>
+      <div class="trending-product">
+        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+        <h3>Kiri Falafel Sandwich</h3>
+        <p class="price">30 EGP</p>
       </div>
     </div>
+  </details>
+</section>
 
-    <!-- Small Items -->
-    <div class="small-items">
-      <div class="small-item">
-        <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-        <div class="text">
-          <strong>Kiri Falafel</strong><br>
-          <p>Delicous Falafel sandwhich filled with kiri</p> <br>
-          <span class="price">140 EGP</span>
-        </div>
-      </div>
-      <div class="small-item">
-        <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-        <div class="text">
-          <strong>Kiri Falafel</strong><br>
-          <p>Delicous Falafel sandwhich filled with kiri</p> <br>
-          <span class="price">166 EGP</span>
-        </div>
-      </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<section class="products-list">
+  <h2>Products</h2>
+  <div class="products-list-container">
+    <div class="product">
+      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <h3>Kiri Falafel Sandwich</h3>
+      <p class="price">30 EGP</p>
+      <button class="addToCart">Add to cart</button>
+    </div>
+    <div class="product">
+      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <h3>Kiri Falafel Sandwich</h3>
+      <p class="price">30 EGP</p>
+      <button class="addToCart">Add to cart</button>
+    </div>
+    <div class="product">
+      <img src="Images/KiriFalafel.png" alt="KiriFalafel">
+      <h3>Kiri Falafel Sandwich</h3>
+      <p class="price">30 EGP</p>
+      <button class="addToCart">Add to cart</button>
     </div>
   </div>
-</div>
-<div class="Products-Container">
-<h3>All Products</h3>
-<div class="Product-list">
-<div class="Product-item">
-<img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-  <div class="Product-info">
-    <p class="product-name">Falafel Kiri</p>
-    <p class="price"> 1 egp</p>
-
-  </div>
-  <button class="addToCart">Add to cart</button>
-
-</div>
-  <div class="Product-item">
-    <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-    <div class="Product-info">
-      <p class="product-name">Falafel Kiri</p>
-      <p class="price"> 1 egp</p>
-
-    </div>
-    <button class="addToCart">Add to cart</button>
-
-  </div>
-  <div class="Product-item">
-    <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-    <div class="Product-info">
-      <p class="product-name">Falafel Kiri</p>
-      <p class="price"> 1 egp</p>
-
-    </div>
-    <button class="addToCart">Add to cart</button>
-
-  </div>
-  <div class="Product-item">
-    <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-    <div class="Product-info">
-      <p class="product-name">Falafel Kiri</p>
-      <p class="price"> 1 egp</p>
-
-    </div>
-    <button class="addToCart">Add to cart</button>
-
-  </div>
-  <div class="Product-item">
-    <img src="Images/KiriFalafel.png" alt="Kiri Falafel">
-    <div class="Product-info">
-      <p class="product-name">Falafel Kiri</p>
-      <p class="price"> 1 egp</p>
-
-    </div>
-    <button class="addToCart">Add to cart</button>
-
-  </div>
-</div>
-</div>
-
+</section>
 
 
 
