added js and css to make the trending products animate while being opened also changed it so it only has 3 products as 6 takes up too much space (maybe make it scrollable from left to right?) also animation has an issue with sometimes not working possibly due to browser optimization?

--- a/Products.html
+++ b/Products.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Products</title>
+  <meta charset="UTF-8">
+  <title>Products</title>
   <link rel="stylesheet" href="Styles/Products.css">
 
   <header>
@@ -22,10 +22,10 @@
 </head>
 <body>
 <section class="Storeshow">
-<div class="StoreEX">
-  <h1 class="store-name">My Corner</h1>
-  <h2 class="store-cuisine"> Foul and Falafel</h2>
-</div>
+  <div class="StoreEX">
+    <h1 class="store-name">My Corner</h1>
+    <h2 class="store-cuisine"> Foul and Falafel</h2>
+  </div>
 </section>
 
 
@@ -34,21 +34,6 @@
   <details>
     <summary>Trending Products</summary>
     <div class="trending-products-container">
-      <div class="trending-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
-        <h3>Kiri Falafel Sandwich</h3>
-        <p class="price">30 EGP</p>
-      </div>
-      <div class="trending-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
-        <h3>Kiri Falafel Sandwich</h3>
-        <p class="price">30 EGP</p>
-      </div>
-      <div class="trending-product">
-        <img src="Images/KiriFalafel.png" alt="KiriFalafel">
-        <h3>Kiri Falafel Sandwich</h3>
-        <p class="price">30 EGP</p>
-      </div>
       <div class="trending-product">
         <img src="Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
@@ -104,6 +89,11 @@
     </div>
   </div>
 </section>
+<script src="JavaScript/Products.js"></script>
+
+
+
+
 
 
 
