--- a/About-us.html
+++ b/About-us.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>About us</title>
   <link rel="stylesheet" href="Styles/AboutUs.css">
+  <link rel="stylesheet" href="Styles/Universalcss.css">
 </head>
 
 <body>
