--- a/Stores.html
+++ b/Stores.html
@@ -32,19 +32,36 @@
 
     <div class="Store-container">
         <div class="store">
-            <img src="Images/Store1.jpg" alt="Store 1">
-            <h3>Store 1</h3>
-            <p>Description of Store 1.</p>
+            <img src="Images/corner_upscaled.png" alt="Store 1">
+            <h3>My corner</h3>
+            <p>Foul & Falafel, Crepe.</p>
+        </div>
+
+        <div class="store">
+            <img src="Images/manoucheh-noBG.png" alt="Store 3">
+
+            <h3>Manoucheh</h3>
+            <p>Manakish, Bakery, Pizza.</p>
         </div>
         <div class="store">
-            <img src="Images/Store2.jpg" alt="Store 2">
-            <h3>Store 2</h3>
-            <p>Description of Store 2.</p>
+            <img src="Images/sbarro-removebg-preview.png" alt="Store 3">
+            <h3>Sbarro</h3>
+            <p>Pizza, Salad, Italian.</p>
         </div>
         <div class="store">
-            <img src="Images/Store3.jpg" alt="Store 3">
-            <h3>Store 3</h3>
-            <p>Description of Store 3.</p>
+            <img src="Images/zalabya-removebg-preview.png" alt="Store 3">
+            <h3>Batates & Zalabya</h3>
+            <p>Fast food, Dessert.</p>
+        </div>
+        <div class="store">
+            <img src="Images/gyro-noBG.png" alt="Store 3">
+            <h3>Gyro</h3>
+            <p>Wraps, Chicken.</p>
+        </div>
+        <div class="store">
+            <img src="Images/farghaly-noBG.png " alt="Store 3">
+            <h3>Farghaly</h3>
+            <p>Desserts, Drinks, Salad.</p>
         </div>
     </div>
 </section>
