mohamed sayed and yahia created page fully done, fixed all headers so they direct to the correct page, fixed hover on products and product details, unified header css in css file

--- a/About-us.html
+++ b/About-us.html
@@ -12,7 +12,7 @@
   <h1>UniBite.</h1>
   <nav>
     <ul>
-      <li><a href="link">Restaurants</a></li>
+      <li><a href="Stores.html">Restaurants</a></li>
       <li><a href="About-us.html">About us</a></li>
       <li><a href="link">Help</a></li>
     </ul>
