--- a/Product-details.html
+++ b/Product-details.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Details</title>
+  <title>Product Details</title>
   <link rel="stylesheet" href="Styles/ProductDetails.css">
+  <link rel="stylesheet" href="Styles/Universalcss.css">
 </head>
 
 <body>
@@ -11,13 +12,13 @@
   <h1>UniBite.</h1>
   <nav>
     <ul>
-      <li><a href="link">Restaurants</a></li>
+      <li><a href="Stores.html">Restaurants</a></li>
       <li><a href="About-us.html">About us</a></li>
       <li><a href="link">Help</a></li>
     </ul>
     <div>
-      <button class="singUp">Sign up</button>
-      <button class="logIn">Log in</button>
+      <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
+      <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
     </div>
   </nav>
 </header>
