--- a/SignUp.html
+++ b/SignUp.html
@@ -12,8 +12,8 @@
 <div class="navbar">
     <div class="logo">UniBite.</div>
     <div class="nav-links">
-        <a href="#">Restaurants</a>
-        <a href="#">About Us</a>
+        <a href="Stores.html">Restaurants</a>
+        <a href="About-us.html">About Us</a>
         <a href="#">Help</a>
     </div>
     <button class="login-btn">Login</button>
@@ -52,22 +52,7 @@
     <div class="credentials">© 2025 UniBite. All rights reserved.</div>
 </div>
 
-<script>
-    function validateEmail() {
-        let email = document.getElementById("email").value;
-        let regex = /^[a-zA-Z0-9._%+-]+@miuegypt\.edu\.eg$/;
-
-        if (!regex.test(email)) {
-            alert("Invalid email. Please use an @miuegypt.edu.eg email.");
-            return false; // Prevent form submission
-        }
-        return true; // Proceed with SignUp
-    }
-
-    function continueWithGoogle() {
-        alert("Google login is not implemented yet!");
-    }
-</script>
+<script src="JavaScript/EmailValidation.js"></script>
 
 </body>
 </html>
