--- a/Stores.html
+++ b/Stores.html
@@ -9,13 +9,13 @@
         <h1>UniBite.</h1>
         <nav>
             <ul>
-                <li><a href="link">Restaurants</a></li>
+                <li><a href="Stores.html">Restaurants</a></li>
                 <li><a href="About-us.html">About us</a></li>
                 <li><a href="link">Help</a></li>
             </ul>
             <div>
-                <button class="singUp">Sign up</button>
-                <button class="logIn">Log in</button>
+                <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
+                <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
             </div>
         </nav>
     </header>
