mohamed sayed & yahia mohamed.
fixed links to help page, added missing button to header in help page, added missing clickable logos, centered footer links

--- a/Help.html
+++ b/Help.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Help</title>
     <link rel="stylesheet" href="Styles/Help.css">
+
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="navbar">
-    <div class="logo">UniBite.</div>
+    <div class="logo"><a href="UniBite.html">UniBite.</a></div>
     <div class="nav-links">
         <a href="Stores.html">Restaurants</a>
         <a href="About-us.html">About Us</a>
-        <a href="#">Help</a>
+        <a href="Help.html">Help</a>
     </div>
-    <button class="login-btn">Login</button>
-</div>
+    <button class="signup-btn" onclick="window.location.href='SignUp.html'">Sign up</button>
+    <button class="login-btn" onclick="window.location.href='Login.html'">Log in</button></div>
 
 <!-- request Form Container -->
 <div class="main-content">
@@ -41,9 +42,10 @@
 <div class="footer">
     <div class="logo">UniBite.</div>
     <div class="footer-links">
-        <a href="#">Restaurants</a>
-        <a href="#">About Us</a>
-        <a href="#">Help</a>
+        <a href="Stores.html">Restaurants</a>
+        <a href="About-us.html">About Us</a>
+        <a href="Help.html">Help</a>
+
     </div>
     <div class="credentials">© 2025 UniBite. All rights reserved.</div>
 </div>
