--- a/Login.html
+++ b/Login.html
@@ -10,11 +10,11 @@
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo">UniBite.</div>
+        <div class="logo"><a href="UniBite.html">UniBite.</a></div>
         <div class="nav-links">
             <a href="Stores.html">Restaurants</a>
             <a href="About-us.html">About Us</a>
-            <a href="#">Help</a>
+            <a href="Help.html">Help</a>
         </div>
         <button class="signup-btn">Sign Up</button>
     </div>
