--- a/Product-details.html
+++ b/Product-details.html
@@ -9,12 +9,12 @@
 
 <body>
 <header>
-  <h1>UniBite.</h1>
+  <h1 class="logo"><a href="UniBite.html">UniBite.</a></h1>
   <nav>
     <ul>
       <li><a href="Stores.html">Restaurants</a></li>
       <li><a href="About-us.html">About us</a></li>
-      <li><a href="link">Help</a></li>
+      <li><a href="Help.html">Help</a></li>
     </ul>
     <div>
       <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
