--- a/About-us.html
+++ b/About-us.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="Stores.html">Restaurants</a></li>
       <li><a href="About-us.html">About us</a></li>
-      <li><a href="link">Help</a></li>
+      <li><a href="Help.html">Help</a></li>
     </ul>
     <div>
       <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
