fixed footer and added it to all pages, renamed unibts to unibite. added more images and changed Universalcss.css to have footer css

--- a/About-us.html
+++ b/About-us.html
@@ -9,7 +9,7 @@
 
 <body>
 <header>
-  <h1>UniBite.</h1>
+  <h1 class="logo"><a href="UniBite.html">UniBite.</a></h1>
   <nav>
     <ul>
       <li><a href="Stores.html">Restaurants</a></li>
@@ -41,6 +41,19 @@
         </p>
     </section>
 
+
 </main>
+
+<!-- Footer -->
+<div class="footer">
+  <div class="logo">UniBite.</div>
+  <div class="footer-links">
+    <a href="#">Restaurants</a>
+    <a href="#">About Us</a>
+    <a href="#">Help</a>
+  </div>
+  <div class="credentials">© 2025 UniBite. All rights reserved.</div>
+</div>
+
 </body>
 </html>
