--- a/Product-details.html
+++ b/Product-details.html
@@ -61,6 +61,16 @@
 
     </div>
   </section>
+  <!-- Footer -->
+  <div class="footer">
+    <div class="logo">UniBite.</div>
+    <div class="footer-links">
+      <a href="#">Restaurants</a>
+      <a href="#">About Us</a>
+      <a href="#">Help</a>
+    </div>
+    <div class="credentials">© 2025 UniBite. All rights reserved.</div>
+  </div>
 
 </main>
 </body>
