--- a/Products.html
+++ b/Products.html
@@ -90,6 +90,18 @@
     </div>
   </div>
 </section>
+
+<!-- Footer -->
+<div class="footer">
+  <div class="logo">UniBite.</div>
+  <div class="footer-links">
+    <a href="#">Restaurants</a>
+    <a href="#">About Us</a>
+    <a href="#">Help</a>
+  </div>
+  <div class="credentials">© 2025 UniBite. All rights reserved.</div>
+</div>
+
 <script src="JavaScript/Products.js"></script>
 
 
