fixed admin background issues and more image paths

--- a/Admin.html
+++ b/Admin.html
@@ -11,7 +11,7 @@
         <nav>
             <h1>Dashboard</h1>
             <h2>Admin.</h2>
-            <a href="#"><img src="images/account.jpg" alt="Account"></a>
+            <a href="#"><img src="Images/account.jpg" alt="Account"></a>
         </nav>
     </header>
 
@@ -212,6 +212,6 @@
     
 <script src="JavaScript/Admin.js"></script>
 
-    
+    </div>
 </body>
 </html>
