--- a/Stores.html
+++ b/Stores.html
@@ -31,7 +31,7 @@
 
 
     <div class="Store-container">
-        <div class="store">
+        <div class="store" onclick="window.location.href='Products.html'">
             <img src="Images/corner_upscaled.png" alt="Store 1">
             <h3>My corner</h3>
             <p>Foul & Falafel, Crepe.</p>
