--- a/UniBite.html
+++ b/UniBite.html
@@ -73,8 +73,8 @@
                 <p>Receive instant notifications when your food is ready, so you can pick it up at the perfect time without unnecessary delays.</p>
             </div>
             <div class="buttons">
-                <button class="singUp">Sign up</button>
-                <button class="logIn">Login</button>
+                <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
+                <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
             </div>
         </div>
 
