--- a/Stores.html
+++ b/Stores.html
@@ -5,22 +5,30 @@
     <title>Stores</title>
     <link rel="stylesheet" href="Styles/Stores.css">
     <link rel="stylesheet" href="Styles/Universalcss.css">
-    <header>
-        <h1 class="logo"><a href="UniBite.html">UniBite.</a></h1>
-        <nav>
-            <ul>
-                <li><a href="Stores.html">Restaurants</a></li>
-                <li><a href="About-us.html">About us</a></li>
-                <li><a href="Help.html">Help</a></li>
-            </ul>
-            <div>
-                <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
-                <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
-            </div>
-        </nav>
-    </header>
 </head>
+
+
+
 <body>
+<!-- NAV BAR  -->
+<header>
+    <h1 class="logo"><a href="UniBite.html">UniBite.</a></h1>
+    <nav>
+        <ul>
+            <li><a href="Stores.html">Restaurants</a></li>
+            <li><a href="About-us.html">About us</a></li>
+            <li><a href="Help.html">Help</a></li>
+        </ul>
+        <div>
+            <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
+            <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
+        </div>
+    </nav>
+</header>
+
+
+
+<!-- SECTION 1 - Page title / Hero Section  -->
 <section class="Titlecard">
     <h1>All Restaurants</h1>
     <div class="Search-container">
@@ -30,7 +38,10 @@
 
 
 
+
+<!-- SECTION 2 - Stores  -->
     <div class="Store-container">
+
         <div class="store">
             <img src="Images/corner_upscaled.png" alt="Store 1">
             <h3>My corner</h3>
@@ -38,33 +49,57 @@
         </div>
 
         <div class="store">
-            <img src="Images/manoucheh-noBG.png" alt="Store 3">
-
+            <img src="Images/manoucheh-noBG.png" alt="Store 2">
             <h3>Manoucheh</h3>
             <p>Manakish, Bakery, Pizza.</p>
         </div>
+
         <div class="store">
             <img src="Images/sbarro-removebg-preview.png" alt="Store 3">
             <h3>Sbarro</h3>
             <p>Pizza, Salad, Italian.</p>
         </div>
+
         <div class="store">
-            <img src="Images/zalabya-removebg-preview.png" alt="Store 3">
+            <img src="Images/zalabya-removebg-preview.png" alt="Store 4">
             <h3>Batates & Zalabya</h3>
             <p>Fast food, Dessert.</p>
         </div>
+
         <div class="store">
-            <img src="Images/gyro-noBG.png" alt="Store 3">
+            <img src="Images/gyro-noBG.png" alt="Store 5">
             <h3>Gyro</h3>
             <p>Wraps, Chicken.</p>
         </div>
+
         <div class="store">
-            <img src="Images/farghaly-noBG.png " alt="Store 3">
+            <img src="Images/farghaly-noBG.png " alt="Store 6">
             <h3>Farghaly</h3>
             <p>Desserts, Drinks, Salad.</p>
         </div>
+
+        <div class="store">
+            <img src="Images/Cinnabon.png " alt="Store 7">
+            <h3>Cinnabon</h3>
+            <p>Desserts, Drinks.</p>
+        </div>
+
+        <div class="store">
+            <img src="Images/TBS.jpg " alt="Store 8">
+            <h3>The Bakery Shop</h3>
+            <p>Pastries,Drinks, Salad.</p>
+        </div>
+
+        <div class="store">
+            <img src="Images/Rtogo.png " alt="Store 9">
+            <h3>RtoGo</h3>
+            <p>Sandwiches , pizza.</p>
+        </div>
+
     </div>
-    <!-- Footer -->
+
+
+<!-- Footer -->
     <div class="footer">
         <div class="logo">UniBite.</div>
         <div class="footer-links">
@@ -74,6 +109,6 @@
         </div>
         <div class="credentials">© 2025 UniBite. All rights reserved.</div>
     </div>
-</section>
+
 </body>
 </html>
