Modification to Landing Page: - Changed all the hero section (Section 1) - Improved css for section 1 and 2 - Made the page fully responsive on mobiles - Fixed Footer

--- a/UniBite.html
+++ b/UniBite.html
@@ -43,16 +43,56 @@
 
 <!-- Section 1 -->
 <div class="Section1">
-        <div class="logo-container">
-            <img class="Main-logo" src="Images/LogoVF.png">
+    <div class="logo-container">
+        <img class="Main-logo" src="Images/LogoVF.png" alt="UniBite Logo">  <!-- UniBite Main Logo -->
+    </div>
+    <div class="Background-Container"> </div> <!-- Container of the hero section background -->
+
+    <div class="hero-content">
+        <div class="hero-text">
+
+            <h1 class="hero-title">
+                <span>Revolutionizing</span>
+                <span>Campus</span>
+                <span>Dining</span>
+            </h1>
+            <p class="hero-subtitle">Your meal is one click away</p>
+            <div class="hero-buttons">
+                <button class="primary-btn" onclick="window.location.href='Stores.html'">Explore Restaurants</button>
+                <button class="secondary-btn" onclick="window.location.href='SignUp.html'">Bite Now</button>
+            </div>
         </div>
 
-    <div class="Background-Container"> </div>
+        <div class="hero-features">
+            <div class="feature">
+                <div class="feature-icon">🍽️</div>
+                <h3>Large Selection</h3>
+                <p>Various cuisine selection</p>
+            </div>
+            <div class="feature">
+                <div class="feature-icon">⚡</div>
+                <h3>Quick Service</h3>
+                <p>Fast efficient ordering</p>
+            </div>
+            <div class="feature">
+                <div class="feature-icon">💫</div>
+                <h3>Special Offers</h3>
+                <p>Exclusive student deals</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="scroll-indicator">
+        <div class="mouse"></div>
+        <p>Scroll to explore</p>
+    </div>
 
 </div>
 
 
-<!-- Section 2 -->
+
+<!-- Section 2 -->`
 <div class="Section2">
 
     <div class="LogIn-SignUp">
@@ -69,7 +109,7 @@
     </div>
 
     <div class="Restaurants">
-        <h1>OUR RESTAURANTS</h1>
+        <h1>OUR STORES</h1>
         <button onclick="window.location.href='Stores.html'">VIEW RESTAURANTS</button>
     </div>
 
@@ -222,11 +262,6 @@
 <!-- Footer -->
 <div class="footer">
     <div class="logo">UniBite.</div>
-    <div class="footer-links">
-        <a href="#">Restaurants</a>
-        <a href="#">About Us</a>
-        <a href="#">Help</a>
-    </div>
     <div class="credentials">© 2025 UniBite. All rights reserved.</div>
 </div>
 
